--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Youssef
-middle_name:
+middle_name: W.
 last_name: Elmougy
 email: yer@elmougy.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
